Bug 525266: [9] ECJ doesn't report conflicting packages when modules are added with --add-modules
Change-Id: Idef3d7565df4b5b1c27d1fe9f68a3b09e3bd3f5b
Signed-off-by: Jay Arthanareeswaran <jarthana@in.ibm.com>